--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 node_modules/
-* linguist-vendored
-*.js linguist-vendored=false
+*.java linguist-detectable=false 
+*.js linguist-detectable=true 
+*.html linguist-detectable=false 
+*.xml linguist-detectable=false
