--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 node_modules/
-*.java linguist-detectable=false 
 *.js linguist-detectable=true 
+*.css linguist-detectable=false
+*.java linguist-detectable=false
+*.python linguist-detectable=false 
+*.html linguist-detectable=false  
+*.xml linguist-detectable=false 
+
 
